--- a/templates/display.html
+++ b/templates/display.html
@@ -131,7 +131,7 @@
                                     </li>
                                     <li>
                                         <a href="#pcaCard">
-                                            <span class="sub-item">PCA</span>
+                                            <span class="sub-item">PCA 2D</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -238,7 +238,7 @@
                         <div class="col-md-12">
                             <div id='pcaCard' class="card">
                                 <div class="card-header">
-                                    <h4 class="card-title">PCA</h4>
+                                    <h4 class="card-title">PCA 2D</h4>
                                 </div>
                                 <div class="card-body">
                                     <img src="{{ url_for('static', filename='img/pca.png') }}" alt="">
