--- a/templates/forest.html
+++ b/templates/forest.html
@@ -175,14 +175,21 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- <div class="card">
+                        <div class="card-body">
+                            <label>
+                                Dataset :
+                            </label>
+                        </div>
+                    </div> -->
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="card">
-                                <div class="card-header">
-                                    <h4 class="card-title">Parameters Isolation Forest</h4>
-                                </div>
-                                <div class="card-body">
-                                    <form action="{{ url_for('forest') }}" method="POST">
+                            <form action="{{ url_for('forest') }}" method="POST">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h4 class="card-title">Parameters Isolation Forest</h4>
+                                    </div>
+                                    <div class="card-body">
                                         <div class="form-group">
                                             <label>Atribut Kelas</label>
                                             <select class="form-control" name="kelas" id="kelas">
@@ -216,11 +223,6 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <label>Test Size (%)</label>
-                                            <input class="form-control" type="number" name="tsize" id="tsize"
-                                                value="{{ tsize }}">
-                                        </div>
-                                        <div class="form-group">
                                             <label>Contamination (%)</label>
                                             <input class="form-control" type="number" name="cont" id="cont"
                                                 value="{{ cont }}">
@@ -235,18 +237,29 @@
                                             <input class="form-control" type="number" name="sample" id="samples"
                                                 value="{{ sample }}">
                                         </div>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="card-body">
+                                        <div class="form-group">
+                                            <label>Test Size (%)</label> <br>
+                                            <small>Used in Fit and Predict Method</small>
+                                            <input class="form-control" type="number" name="tsize" id="tsize"
+                                                value="{{ tsize }}">
+                                        </div>
                                         <button type="submit" class="btn btn-default" data-toggle="collapse"
                                             data-target="#eval">Submit</button>
-                                    </form>
+                                    </div>
                                 </div>
-                            </div>
+                            </form>
+                            {% if ps is defined %}
                         </div>
-                        {% if prec is defined %}
                         <div class="col-md-5">
                             <div id="eval">
                                 <div class="card">
                                     <div class="card-header">
                                         <h4 class="card-title">Confusion Matrix</h4>
+                                        <small>Confusion Matrix using Fit and Predict Method</small>
                                     </div>
                                     <div class="card-body">
                                         <div class="card-body">
@@ -255,8 +268,19 @@
                                     </div>
                                 </div>
                             </div>
+                            <div id="eval">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h4 class="card-title">Confusion Matrix</h4>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="card-body">
+                                            <img src="{{ url_for('static', filename=filepath2) }}" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-
                         <div class="col-md-3">
                             <div class="card">
                                 <div class="card-header">
@@ -267,7 +291,7 @@
                                         <div class="col-7 col-stats">
                                             <div class="numbers">
                                                 <p class="card-category">Precision</p>
-                                                <h4 class="card-title">{{prec}}</h4>
+                                                <h4 class="card-title">{{ps}}</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -277,12 +301,12 @@
                                         <div class="col-7 col-stats">
                                             <div class="numbers">
                                                 <p class="card-category">Recall</p>
-                                                <h4 class="card-title">{{sens}}</h4>
+                                                <h4 class="card-title">{{rs}}</h4>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-body ">
+                                <!-- <div class="card-body ">
                                     <div class="row">
                                         <div class="col-7 col-stats">
                                             <div class="numbers">
@@ -291,18 +315,62 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="card-body ">
                                     <div class="row">
                                         <div class="col-7 col-stats">
                                             <div class="numbers">
                                                 <p class="card-category">F1 Score</p>
-                                                <h4 class="card-title">{{f1}}</h4>
+                                                <h4 class="card-title">{{f1_s}}</h4>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title">Metrik Evaluasi</h4>
+                                </div>
+                                <div class="card-body ">
+                                    <div class="row">
+                                        <div class="col-7 col-stats">
+                                            <div class="numbers">
+                                                <p class="card-category">Precision</p>
+                                                <h4 class="card-title">{{ps1}}</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-body ">
+                                    <div class="row">
+                                        <div class="col-7 col-stats">
+                                            <div class="numbers">
+                                                <p class="card-category">Recall</p>
+                                                <h4 class="card-title">{{rs1}}</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- <div class="card-body ">
+                                    <div class="row">
+                                        <div class="col-7 col-stats">
+                                            <div class="numbers">
+                                                <p class="card-category">Specificity</p>
+                                                <h4 class="card-title">{{spec}}</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <div class="card-body ">
+                                    <div class="row">
+                                        <div class="col-7 col-stats">
+                                            <div class="numbers">
+                                                <p class="card-category">F1 Score</p>
+                                                <h4 class="card-title">{{f1_s1}}</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 {% endif %}
                             </div>
                         </div>
@@ -310,7 +378,7 @@
                 </div>
                 <footer class="footer">
                     <div class="container-fluid">
-                        <nav class="pull-left"> 
+                        <nav class="pull-left">
                         </nav>
                     </div>
                 </footer>
@@ -368,10 +436,10 @@
             // range.value = 36
             // persenan.innerHTML = range.value
 
-            if (tsize.value == '' || cont.value == null) {
+            if (tsize.value == '' || tsize.value == null) {
                 tsize.value = 30
             }
-            
+
             if (cont.value == '' || cont.value == null) {
                 cont.value = 10
             }
