--- a/templates/forest.html
+++ b/templates/forest.html
@@ -40,7 +40,7 @@
             <div class="logo-header" data-background-color="blue">
 
                 <a href="{{url_for('index')}}" class="logo">
-                    <img src="{{url_for('static', filename='img/logo.svg')}}" alt="navbar brand" class="navbar-brand">
+                    <img src="{{url_for('static', filename='img/Iforest.svg')}}" alt="navbar brand" class="navbar-brand">
                 </a>
                 <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
                     data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -190,8 +190,11 @@
                                         <h4 class="card-title">Parameters Isolation Forest</h4>
                                     </div>
                                     <div class="card-body">
+                                            <div class="form-group">
+                                                    <label>Dataset : {{ data }}</label>
+                                                </div>
                                         <div class="form-group">
-                                            <label>Atribut Kelas</label>
+                                            <label>Class Atribut</label>
                                             <select class="form-control" name="kelas" id="kelas">
                                                 {% for element in column %}
                                                 {% if element == kelas %}
@@ -214,7 +217,7 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-group">
-                                                    <label>Anomali</label>
+                                                    <label>Anomaly</label>
                                                     <select class="form-control" name="abnormal" id="abnormal">
                                                         <option value="1">1</option>
                                                         <option value="0">0</option>
@@ -225,7 +228,7 @@
                                         <div class="form-group">
                                             <label>Contamination (%)</label>
                                             <input class="form-control" type="number" name="cont" id="cont"
-                                                value="{{ cont }}">
+                                                value="{{ cont }}" step='any'>
                                         </div>
                                         <div class="form-group">
                                             <label>Number of Tree</label>
@@ -233,7 +236,7 @@
                                                 value="{{ tree }}">
                                         </div>
                                         <div class="form-group">
-                                            <label>Samples</label>
+                                            <label>Max Samples</label>
                                             <input class="form-control" type="number" name="sample" id="samples"
                                                 value="{{ sample }}">
                                         </div>
@@ -247,8 +250,10 @@
                                             <input class="form-control" type="number" name="tsize" id="tsize"
                                                 value="{{ tsize }}">
                                         </div>
-                                        <button type="submit" class="btn btn-default" data-toggle="collapse"
-                                            data-target="#eval">Submit</button>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-default" data-toggle="collapse"
+                                                data-target="#eval">Excecute</button>
+                                        </div>
                                     </div>
                                 </div>
                             </form>
@@ -259,7 +264,7 @@
                                 <div class="card">
                                     <div class="card-header">
                                         <h4 class="card-title">Confusion Matrix</h4>
-                                        <small>Confusion Matrix using Fit and Predict Method</small>
+                                        <small>Confusion Matrix using Fit_Predict Method</small>
                                     </div>
                                     <div class="card-body">
                                         <div class="card-body">
@@ -272,6 +277,7 @@
                                 <div class="card">
                                     <div class="card-header">
                                         <h4 class="card-title">Confusion Matrix</h4>
+                                        <small>Confusion Matrix using Fit and Predict Method</small>
                                     </div>
                                     <div class="card-body">
                                         <div class="card-body">
@@ -284,7 +290,8 @@
                         <div class="col-md-3">
                             <div class="card">
                                 <div class="card-header">
-                                    <h4 class="card-title">Metrik Evaluasi</h4>
+                                    <h4 class="card-title">Evaluation Metric</h4>
+                                    <small>Evaluation Fit_Predict Method</small>
                                 </div>
                                 <div class="card-body ">
                                     <div class="row">
@@ -329,7 +336,8 @@
                             </div>
                             <div class="card">
                                 <div class="card-header">
-                                    <h4 class="card-title">Metrik Evaluasi</h4>
+                                    <h4 class="card-title">Evaluation Metric</h4>
+                                    <small>Evaluation Fit and Predict Method</small>
                                 </div>
                                 <div class="card-body ">
                                     <div class="row">
