--- a/templates/upload.html
+++ b/templates/upload.html
@@ -40,7 +40,8 @@
             <div class="logo-header" data-background-color="blue">
 
                 <a href="{{url_for('index')}}" class="logo">
-                    <img src="{{url_for('static', filename='img/logo.svg')}}" alt="navbar brand" class="navbar-brand">
+                    <img src="{{url_for('static', filename='img/Iforest.svg')}}" alt="navbar brand"
+                        class="navbar-brand">
                 </a>
                 <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
                     data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -148,13 +149,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
+                            <a href="#" data-toggle="tooltip" title="The dataset has not been selected">
                                 <i class="fas fa-th-list"></i>
                                 <p>Data Information</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
+                            <a href="#" data-toggle="tooltip" title="The dataset has not been selected">
                                 <i class="fas fa-layer-group"></i>
                                 <p>Modeling and Evaluation</p>
                             </a>
@@ -217,13 +218,16 @@
                                                 {% for element in column %}
                                                 <th>{{ element }}</th>
                                                 {% endfor %}
+                                                <!-- <a href="#" data-toggle="tooltip" title="Hooray!">Hover over me</a> -->
                                             </thead>
                                             <tbody>
                                                 {% for element in files %}
+                                                <!-- <a class="list list-group-item"
+                                                    href="{{ url_for('choose') }}?data={{ element.f }}" data-toggle="modal" title="Anomali = {{element.n}}  Normal = {{element.a}} ">{{ element.f }}</a> -->
                                                 <a class="list list-group-item"
-                                                    href="{{ url_for('choose') }}?data={{ element }}">{{ element }}</a>
+                                                    href="{{ url_for('choose') }}?data={{ element }}"
+                                                    data-toggle="modal" data-target="#myInfoModal">{{ element }}</a>
                                                 {% endfor %}
-
                                             </tbody>
                                         </table>
                                     </div>
@@ -236,9 +240,9 @@
             <footer class="footer">
                 <div class="container-fluid">
                     <nav class="pull-left">
-                        
+
                     </nav>
-                    
+
                 </div>
             </footer>
         </div>
@@ -298,6 +302,38 @@
             </div>
         </div>
     </div>
+
+    <!-- Modal Info -->
+    <div id="myInfoModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Data Info</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <form action='{{ url_for("display") }}' method="POST">
+                    <div class="modal-body">
+                        <small>{{}}</small>
+                        <label>Anomaly : {{}}</label><br>
+                        <label>Normal  : {{}}</label><br>
+                    </div>
+                    <div class="modal-footer">
+                        <a type="submit" class="btn btn-default">Select Data</a>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
+
+
+
     <!--   Core JS Files   -->
     <script src="{{url_for('static', filename='js/core/jquery.3.2.1.min.js')}}"></script>
     <script src="{{url_for('static', filename='js/core/popper.min.js')}}"></script>
