--- a/templates/uploadnone.html
+++ b/templates/uploadnone.html
@@ -40,7 +40,8 @@
             <div class="logo-header" data-background-color="blue">
 
                 <a href="index.html" class="logo">
-                    <img src="{{url_for('static', filename='img/logo.svg')}}" alt="navbar brand" class="navbar-brand">
+                    <img src="{{url_for('static', filename='img/Iforest.svg')}}" alt="navbar brand"
+                        class="navbar-brand">
                 </a>
                 <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
                     data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,13 +111,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
+                            <a href="#" data-toggle="tooltip" title="The dataset has not been selected">
                                 <i class="fas fa-th-list"></i>
                                 <p>Data Information</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
+                            <a href="#" data-toggle="tooltip" title="The dataset has not been selected">
                                 <i class="fas fa-layer-group"></i>
                                 <p>Modeling and Evaluation</p>
                             </a>
@@ -160,11 +161,27 @@
                                     <h4 class="card-title">Upload Data</h4>
                                 </div>
                                 <div class="card-body">
-                                    <div class="form-group"></div>
-                                    <form action="{{ url_for('uploadnone') }}" method="post" enctype="multipart/form-data">
-                                        <input type="file" class="form-control-file mb-3" name="file" id="file"
-                                            accept="csv">
-                                        <button type="submit" class="btn btn-default">Upload</button>
+                                    <form action="{{ url_for('uploadnone') }}" method="POST"
+                                        enctype="multipart/form-data">
+                                        <div class="form-group">
+                                            <label>Description</label>
+                                            <input class="form-control" type="text" name="info" id="info">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Total Normal</label>
+                                            <input class="form-control" type="number" name="normal" id="normal">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Total Anomaly</label>
+                                            <input class="form-control" type="number" name="anomaly" id="anomaly">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="file" class="form-control-file mb-3" name="file" id="file"
+                                                accept="csv">
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-default">Upload</button>
+                                        </div>
                                     </form>
                                 </div>
                             </div>
@@ -187,14 +204,15 @@
                                             <tbody>
                                                 {% for element in files %}
                                                 <a class="list list-group-item"
-                                                    href="{{ url_for('choose') }}?data={{ element }}">{{ element }}</a>
+                                                    href="{{ url_for('choose') }}?data={{ element }}"
+                                                    data-toggle="modal" data-target="#myInfoModal">{{ element}}</a>
                                                 {% endfor %}
                                             </tbody>
                                         </table>
                                     </div>
                                 </div>
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -207,6 +225,27 @@
             </footer>
         </div>
         <!-- End Custom template -->
+    </div>
+
+    <!-- Modal Info -->
+    <div id="myInfoModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Data Info</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <form action='{{ url_for("daftar") }}' method="POST">
+                    <div class="modal-body">
+                        <small> </small>
+                    </div>
+                    <div class="modal-footer">
+                        <a type="submit" class="btn btn-default">Select Data</a>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
     <!--   Core JS Files   -->
