--- a/templates/upload.html
+++ b/templates/upload.html
@@ -277,7 +277,7 @@
         </div>
     </div>
 
-    <!-- Modal Login -->
+    <!-- Modal signup -->
     <div id="signup" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -313,12 +313,12 @@
                 </div>
                 <form action='{{ url_for("display") }}' method="POST">
                     <div class="modal-body">
-                        <small>{{}}</small>
-                        <label>Anomaly : {{}}</label><br>
-                        <label>Normal  : {{}}</label><br>
+                        <small>{{ info }}</small>
+                        <label>Anomaly : {{ ano }}</label><br>
+                        <label>Normal  : {{ nor }}</label><br>
                     </div>
                     <div class="modal-footer">
-                        <a type="submit" class="btn btn-default">Select Data</a>
+                        <a type="submit" href="{{ url_for('display') }}" class="btn btn-default">Select Data</a>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </form>
