--- a/templates/uploadnone.html
+++ b/templates/uploadnone.html
@@ -235,12 +235,14 @@
                     <h4 class="modal-title">Data Info</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <form action='{{ url_for("daftar") }}' method="POST">
-                    <div class="modal-body">
-                        <small> </small>
-                    </div>
+                <form action='{{ url_for("display") }}' method="POST">
+                        <div class="modal-body">
+                                <small>{{ info }}</small>
+                                <label>Anomaly : {{ ano }}</label><br>
+                                <label>Normal  : {{ nor }}</label><br>
+                            </div>
                     <div class="modal-footer">
-                        <a type="submit" class="btn btn-default">Select Data</a>
+                        <a type="submit" href="{{ url_for('display') }}" class="btn btn-default">Select Data</a>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </form>
